--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 PORT=3000
-MONGODB_URI=YOUR MONGODB URI
-DB_NAME=DATABASE NAME OF YOUR CHOICE
-DB_USER=DATABASE USER
-DB_PASS=DATABASE USER PASSWORD
+MONGODB_URI=mongodb://localhost:27017
+DB_NAME=amazing_co_dev
+NAME=Penny Lischer
