--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "restapi_youtube",
+  "name": "nodejsapi",
   "version": "1.0.0",
-  "description": "Youtube Tutorial",
+  "description": "Nodejs APIs with Express and MySQL",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "author": "Me",
+  "author": "Penny Lischer",
   "license": "ISC",
+  "keywords": [
+    "NodeJs",
+    "Express",
+    "MySQL",
+    "API"
+  ],
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.6.0",
+    "express": "^4.17.2",
     "http-errors": "^1.7.3",
-    "mongoose": "^5.7.13"
+    "ip": "^1.1.5",
+    "mysql": "^2.18.1",
+    "pino": "^7.6.5",
+    "pino-pretty": "^7.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "http-server": "^14.1.0",
+    "nodemon": "^2.0.15"
   }
 }
